[gd_scene load_steps=13 format=3 uid="uid://p78u7nt5kn2"]

[ext_resource type="Texture2D" uid="uid://d4jc86jbi0r43" path="res://art/greybox/texture_02.png" id="1_cufey"]
[ext_resource type="Script" path="res://lefttoright.gd" id="1_m1dax"]
[ext_resource type="PackedScene" uid="uid://ci1v0dqw8vd0r" path="res://mob.tscn" id="2_1wnly"]
[ext_resource type="PackedScene" uid="uid://brlvvi03qe7t" path="res://player.tscn" id="2_i25y1"]
[ext_resource type="Script" path="res://camera_3d.gd" id="2_mjamd"]
[ext_resource type="Script" path="res://ScoreLabel.gd" id="6_c8hie"]
[ext_resource type="Script" path="res://level_label.gd" id="6_mcf2v"]
[ext_resource type="Texture2D" uid="uid://cjvaxxmntx44o" path="res://art/greybox/texture_07.png" id="10_6l2rt"]
[ext_resource type="Script" path="res://health_bar.gd" id="11_pcdp0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jmufy"]
albedo_texture = ExtResource("1_cufey")
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uvoac"]
albedo_texture = ExtResource("1_cufey")
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="Curve3D" id="Curve3D_m1t54"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 76),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[node name="Node3D" type="Node3D"]
script = ExtResource("1_m1dax")
mob_scene = ExtResource("2_1wnly")

[node name="level" type="Node3D" parent="."]

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="level"]
material_override = SubResource("StandardMaterial3D_jmufy")
use_collision = true
collision_layer = 4
collision_mask = 3

[node name="Ground" type="CSGBox3D" parent="level/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -1, -18.5)
size = Vector3(15, 1, 222)
material = SubResource("StandardMaterial3D_uvoac")

[node name="Ground" type="CSGBox3D" parent="level/CSGCombiner3D/Ground"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -8, 0, -0.5)
size = Vector3(15, 1, 222)
material = SubResource("StandardMaterial3D_uvoac")

[node name="Platform" type="CSGBox3D" parent="level/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.5, 3, 36)
size = Vector3(10, 1, 17)

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="level/CSGCombiner3D/Platform"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4.5, -0.5, -10.5)
polygon = PackedVector2Array(-2, 0, -2, 1, 1, 0, 8, -3)
depth = 8.5

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="level/CSGCombiner3D/Platform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
operation = 2
radius = 2.226

[node name="SpawnPath" type="Path3D" parent="level"]
curve = SubResource("Curve3D_m1t54")

[node name="SpawnLocation" type="PathFollow3D" parent="level/SpawnPath"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.965926, -0.12941, 0.224144, 0, 0.866025, 0.5, -0.258819, -0.482963, 0.836516, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(-4.2222e-08, -0.258819, 0.965926, -1.13133e-08, 0.965926, 0.258819, -1, 0, -4.37114e-08, 10, 9, 0)
script = ExtResource("2_mjamd")
target = NodePath("../Player")

[node name="Player" parent="." instance=ExtResource("2_i25y1")]
transform = Transform3D(1, 0, 0, 0, 0.988054, 0.154109, 0, -0.154109, 0.988054, -3, 4.35578, 30)

[node name="MobTimer" type="Timer" parent="."]
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeathBackground" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0509804, 0.0509804, 0.662745)

[node name="RespawnLabel" type="Label" parent="UserInterface/DeathBackground"]
layout_mode = 0
offset_left = 310.0
offset_top = 249.0
offset_right = 393.0
offset_bottom = 272.0
text = "retry_label"

[node name="LevelLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 74.0
offset_top = 70.0
offset_right = 114.0
offset_bottom = 93.0
script = ExtResource("6_mcf2v")

[node name="ExperienceLevel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 83.0
offset_top = 27.0
offset_right = 123.0
offset_bottom = 50.0
script = ExtResource("6_c8hie")

[node name="HealthBar" type="TextureProgressBar" parent="UserInterface"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -512.0
offset_right = 512.0
offset_bottom = 1024.0
grow_horizontal = 2
texture_progress = ExtResource("10_6l2rt")
script = ExtResource("11_pcdp0")

[connection signal="on_death" from="Player" to="." method="_on_player_death"]
[connection signal="on_get_experience" from="Player" to="UserInterface/ExperienceLevel" method="_on_player_on_get_experience"]
[connection signal="on_get_level" from="Player" to="UserInterface/LevelLabel" method="_on_player_on_get_level"]
[connection signal="on_hit" from="Player" to="UserInterface/HealthBar" method="_on_player_on_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
